# real-time-ml-system-cohort-1

docker-compose/: redpanda.yml
services/trade_producer/: pyproject.toml
services/trade_producer/src/: kraken_api.py  main.py
